# Guardian

./: .dockerignore  .env  .gitignore  DEVELOPMENT_PLAN.md  LICENSE  Makefile  PRD.md  README.md  REPORT.md  docker-compose.yml  dockerfile.dev  package-lock.json  tree.md
apps/engine/: Dockerfile  pyproject.toml  requirements.txt
apps/engine/src/: main.py
apps/engine/src/api/: server.py
apps/engine/src/api/middleware/: auth.py
apps/engine/src/api/routes/: engine.py  health.py  logger.py  websocket.py
apps/engine/src/core/: config.py  exceptions.py
apps/engine/src/data/: cache.py  fetcher.py  models.py
apps/engine/src/indicators/: base.py  momentum.py  pattern.py  registry.py  trend.py  volatility.py
apps/engine/src/modules/: blocker.py  bundle.py  logger.py  signal.py
apps/engine/src/scoring/: adeptive.py  consistency.py  weights.py
apps/engine/src/workers/: scheduler.py
apps/engine/tests/unit/: test_fetcher.py
apps/web/: .dockerignore  .env.example  Dockerfile.dev  docker-compose.yml  dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/hooks/: use-toast.ts  useAnalysis.ts  useAuth.ts  (+1 more)
docs/: ARCHITECTURE.md  MVP.md  PRD.md
infra/docker/: .env  docker-compose.prod.yml  docker-compose.yml
infra/docker/nginx/: nginx.conf
infra/supabase/migrations/: 001_unit.sql  003_logger.sql
supabase/migrations/: 20240203_add_api_keys_to_profiles.sql  20240203_create_logs.sql  20240203_create_orders.sql  20240203_create_profiles.sql
(+46 files in other folders)
